# ChessAI

./: .gitignore  .gitmodules  CMakeLists.txt
sources/: board.cpp  board.hpp  char.hpp  chess.cpp  chess.hpp  main.cpp  moves_builder.cpp  moves_builder.hpp  pixel_engine.cpp  pixel_engine.hpp
